sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:10: error: value += is not a member of Int
    j += 1
      ^